# automation-api

./: .gitignore  Dockerfile  pyproject.toml
automation_api/: __init__.py  mqtt.py
automation_api/api/: hello.py  tasmota_switch.py
automation_api/internal/: admin.py  health.py
